[metadata]
name = leanblueprint
description = Lean prover blueprint plasTeX plugin.
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.16
author = Patrick Massot
url = https://github.com/PatrickMassot/leanblueprint
classifiers=
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
packages = 
  leanblueprint
  leanblueprint.Packages
python_requires= >=3.7
zip_safe = False
include_package_data = True
install_requires = 
  plasTeX >= 3.1
  plastexshowmore >= 0.0.2
  plastexdepgraph >= 0.0.4
  click
  rich
  rich-click
  tomlkit
  Jinja2 >= 3.1.0
  GitPython >= 3.1.28

[options.entry_points]
console_scripts = 
  leanblueprint = leanblueprint.client:safe_cli
